# ShogiAI

./: AGENTS.md  CMakeLists.txt  push.sh  test.cpp
docs/: ShogiAI.md
src/: main.cpp
src/board/: bitboard.hpp  board.cpp  board.hpp
src/engine/: usi_engine.cpp  usi_engine.hpp
src/move/: move.cpp  move.hpp
src/nn/: board_encoder.cpp  board_encoder.hpp
